; ModuleID = '/home/carl/AnghaBench/FFmpeg/fftools/extr_ffplay.c_get_valid_channel_layout.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/fftools/extr_ffplay.c_get_valid_channel_layout.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i64, i32)* @get_valid_channel_layout to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @get_valid_channel_layout(i64 %0, i32 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  store i64 %0, i64* %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load i64, i64* %4, align 8
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %15

8:                                                ; preds = %2
  %9 = load i64, i64* %4, align 8
  %10 = call i32 @av_get_channel_layout_nb_channels(i64 %9)
  %11 = load i32, i32* %5, align 4
  %12 = icmp eq i32 %10, %11
  br i1 %12, label %13, label %15

13:                                               ; preds = %8
  %14 = load i64, i64* %4, align 8
  store i64 %14, i64* %3, align 8
  br label %16

15:                                               ; preds = %8, %2
  store i64 0, i64* %3, align 8
  br label %16

16:                                               ; preds = %15, %13
  %17 = load i64, i64* %3, align 8
  ret i64 %17
}

declare dso_local i32 @av_get_channel_layout_nb_channels(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
